--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Leaderboard">
+        android:theme="@style/Theme.Leaderboard"
+        android:autoRevokePermissions="allowed">
         <activity android:name=".LeaderboardActivity"></activity>
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.SplashScreen">
